--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
   <a class="social-icons " href=""><i class="fa fa-twitter w3-hover-opacity"></i></a>
   <a class="social-icons " href="https://www.linkedin.com/in/ahed-suleiman-2a036a2a4/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
  </footer>
- <script src="counter.js?v=2"></script>
+ <script src="counter.js"></script>
  <!-- <script src="location.js"></script> -->
 </body>
 </html>
