--- a/love.html
+++ b/love.html
@@ -72,7 +72,7 @@
 
     <div class="card">
         <div class="heart">❤️</div>
-        <h1>إلى اسراء</h1>
+        <h1>إلى اسراءتي</h1>
         <p>أنتِ أجمل هدية في حياتي، قرة عيني</p>
         <p>أحبك للأبد ❤️</p>
     </div>
